@@ -293,7 +293,14 @@ proc run_srec_test { test objs } {
     if [istarget xtensa*-*-*] {
 	set flags "$flags -no-relax"
     }
-    
+
+    # Some OpenBSD targets have ProPolice and reference __guard and
+    # __stack_smash_handler.
+    if [istarget *-*-openbsd*] {
+	set flags "$flags --defsym __guard=0"
+	set flags "$flags --defsym __stack_smash_handler=0"
+    }
+
     if { ![ld_simple_link $ld tmpdir/sr1 "$flags $objs"] \
 	 || ![ld_simple_link $ld tmpdir/sr2.sr "$flags --oformat srec $objs"] } {
 	fail $test
