@@ -1,3 +1,8 @@
+2005-04-26  Mark Kettenis  <kettenis@gnu.org>
+
+	* ld-srec/srec.exp (run_srec_test): Deal with ProPolice on
+	*-*-openbsd*.
+
 2005-04-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-discard/extern.d: Expect error.
